[package]
name = "pure_decimal"
version = "0.0.3"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]
description = "A decimal type with no NaN and Infinity"
repository = "https://github.com/mmrath/pure_decimal"
readme = "README.md"
keywords = ["decimal", "float", "NaN", "ordered", "infinity"]
license = "Apache-2.0"

[dependencies]
decimal = "2.0"
serde = { optional = true, version = "1" }

[dev-dependencies]
serde_json = "1"
serde_derive = "1"

[features]
default = ["serde"]
