[package]
name = "pure_decimal"
version = "0.0.8-alpha.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]
description = "A decimal type with no NaN and Infinity"
repository = "https://github.com/mmrath/pure_decimal"
readme = "README.md"
keywords = ["decimal", "float", "NaN", "ordered", "infinity"]
license = "Apache-2.0"

[dependencies]
decimal = "2.0"
serde = { version = "1", optional = true }
clippy = { version = "^0", optional = true }

[dev-dependencies]
serde_json = "1"
serde_derive = "1"

[features]
default = ["serde"]
